--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.292.0",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18",
-    "lucide-react": "^0.292.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
