--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "sqlite3": "^5.1.7"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.10.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
